Open up "java.net" as well (DSE-6.8 problem)